add back in author information and acknowledgements

--- a/draft.tex
+++ b/draft.tex
@@ -35,14 +35,14 @@ bookmarksopen=true,hyperfootnotes=false]{hyperref}
 \thispagestyle{empty}
 
 \title{Inefficient Concessions and Mediation}
-%\author{Kristy Buzard\\ \footnote{We thank Eli Berman, Renee Bowen, Ben Graham, Joel Watson as well as seminar
-%participants at ... for helpful discussions and comments. Affan Rahman and Apurvi Bhartia provided excellent research assistance.}
-%Syracuse University \\
-%kbuzard@syr.edu\\
-%\\
-%Ben Horne\\ 
-%University of California, San Diego\\
-%\\}
+\author{Kristy Buzard\footnote{We thank Eli Berman, Renee Bowen, Ben Graham, and Joel Watson as well as generous seminar
+participants for helpful discussions and comments. Affan Rahman and Apurvi Bhartia provided excellent research assistance. All remaining errors are our own.}\\
+Syracuse University \\
+kbuzard@syr.edu\\
+\\
+Ben Horne\\ 
+University of California, San Diego\\
+\\}
 \date{\today}
 
 \begin{document}
