add references to Maor & Solan

--- a/draft.tex
+++ b/draft.tex
@@ -111,7 +111,7 @@ The probability of nature selecting the high type for a given country is $p$. Th
 
 In period 0, countries 1 and 2 simultaneously give costly concessions $g_i$ $\in \mathbb{R} \geq 0$, where $i\in\left\{1,2\right\}$. Concessions are given at cost $C(g_i)$ and are valued by the recipient in the amount $g_i$. For simplicity, we assume throughout that the cost of giving the gift is equal to the value to the recipient, that is $C(g_i)= g_i$.
 
-Beginning in period 1, countries engage in an infinitely repeated Prisoner's Dilemma once per period with stage game payoffs in Table 1 below. While not a good representation of all-out war or even a zero-sum short term war, the Prisoner's Dilemma is appropriate to represent a limited, continued conflict. In cases appropriately modeled by a Prisoner's Dilemma, it would be better for both parties to exit the protracted conflict, but no party has the unilateral incentive to do so. The critical results of this paper do not depend on a prisoner's dilemma structure; they require only that a better result can be achieved through trust or credible commitment. Thus, a stag hunt or other game structures are also possible. The Prisoner's Dilemma is used because of its wide exposure in the literature.\footnote{This payoff matrix does not distinguish between civil and interstate conflict, though in practice the effects on the payoffs might indeed have a different structure in the different cases.} 
+Beginning in period 1, countries engage in an infinitely repeated Prisoner's Dilemma once per period with stage game payoffs in Table 1 below.\footnote{For a game-theoretic analysis of the repeated Prisoner's Dilemma with uncertainty over discount factors but no signaling game, see Maor and Solan (2015). They focus on the players' belief structures, while our initial signaling stage simplifies the analysis of beliefs.} While not a good representation of all-out war or even a zero-sum short term war, the Prisoner's Dilemma is appropriate to represent a limited, continued conflict. In cases appropriately modeled by a Prisoner's Dilemma, it would be better for both parties to exit the protracted conflict, but no party has the unilateral incentive to do so. The critical results of this paper do not depend on a prisoner's dilemma structure; they require only that a better result can be achieved through trust or credible commitment. Thus, a stag hunt or other game structures are also possible. The Prisoner's Dilemma is used because of its wide exposure in the literature.\footnote{This payoff matrix does not distinguish between civil and interstate conflict, though in practice the effects on the payoffs might indeed have a different structure in the different cases.} 
 
 The countries' stage game actions will be referred to as ``Trust'' and ``Fight'' as represented in Table 1, where Country 1 is the row player and Country 2 is the column player.
 
@@ -806,6 +806,8 @@ Using the mediation mechanism $M$ with $e=0$ and $g_h=1.6$, we satisfy both the 
 \item Kydd, Andrew. ``Which Side Are You On? Bias, Credibility, and Mediation." \emph{American Journal of Political Science} 47, no. 4 (2003), 597-611.
 
 %\item Larson, Deborah Welch. (1987). ``The psychology of reciprocity in international relations.'' \emph{Negotiation Journal.} 4, no. 3, 281-301.
+
+\item Maor, Cy, and Eilon Solan. ``Cooperation under incomplete information on the discount factors.'' \emph{International Journal of Game Theory} 44, no. 2 (2015), 321-346.
 
 \item Meirowitz, Adam; Massimo Morelli; Kristopher W. Ramsey and Francesco Squintani. ``Mediation and Strategic Militarization.'' Unpublished manuscript, 2012.
 
