revise draft to submit to QJPS

--- a/draft.tex
+++ b/draft.tex
@@ -18,7 +18,7 @@
 \newcommand{\de}{\delta}
 \newcommand{\al}{\alpha}
   \usepackage{setspace}
-  \onehalfspacing
+  \doublespacing
 
 \newtheorem{theorem}{Theorem}
 \newtheorem{lemma}{Lemma}
@@ -134,7 +134,7 @@ We will use grim trigger punishments throughout: that is, (Fight, Fight) will be
 3) Country 1 plays Fight in round 1 while country 2 plays Trust, which is followed by both countries playing Fight from round 2 onwards; and 
 4) Country 2 plays Fight in round 1 while country 1 plays Trust, which is followed by both countries playing Fight from round 2 onwards.
 
-Equilibrium payoffs beginning from round 1 are now easily described by noting only the collective first round behavior. Let $X_{ij}$ represent the sum of discounted payoffs for country $i$ where subscripts represent first round strategies of that country. If both countries play T in round 1, the corresponding payoff to country $i$ is represented as $ X_{TT}^i=\frac {T}{1- \delta_i}$. Likewise $X_{TF}^i=({-D}+\frac{\delta_i(W-D)}{1- \delta_i} )$, $ X_{FF}^i=\frac{W-D}{1- \delta_i}$, and  $X_{FT}^i=T+W +\frac{\delta_i(W-D)}{1- \delta_i}$. $X_{FT}^h$, for example, represents payoffs for the high type of country 1 when country 1 fights and country 2 trusts in the first period. Note that because types have different discount factors, the payoffs differ by type.
+Equilibrium payoffs beginning from round 1 are now easily described by noting only the collective first round behavior.\footnote{If a parameter of the model changes after period 0, the equilibrium may be disrupted. Although it is beyond the scope of this paper, one could model this by adding a probability of equilibrium disruption followed by a new round of concessions that would essentially re-start the game--albeit with altered parameters.} Let $X_{ij}$ represent the sum of discounted payoffs for country $i$ where subscripts represent first round strategies of that country. If both countries play T in round 1, the corresponding payoff to country $i$ is represented as $ X_{TT}^i=\frac {T}{1- \delta_i}$. Likewise $X_{TF}^i=({-D}+\frac{\delta_i(W-D)}{1- \delta_i} )$, $ X_{FF}^i=\frac{W-D}{1- \delta_i}$, and  $X_{FT}^i=T+W +\frac{\delta_i(W-D)}{1- \delta_i}$. $X_{FT}^h$, for example, represents payoffs for the high type of country 1 when country 1 fights and country 2 trusts in the first period. Note that because types have different discount factors, the payoffs differ by type.
 
 Parameters are common knowledge with the exception of $\delta_i$, which is country $i$'s private information. We will take the measure of social welfare, and thus the determinant of the optimal equilibrium, to be the sum of participating high types' expected utilities.
 
@@ -380,6 +380,8 @@ Part (b) may be somewhat surprising. Here, a mediator would insert inefficiency 
 (c) When the impacts of future material value are too strong, i.e when the probability of a low type is too high and/or the damages from investing in military power are too large, the parties cannot make peace on their own even with the possibility of signaling their type through concessions. By ensuring that only high types exchange gifts, the mediator removes this threat of damaging behavior by one's negotiating partner as well as the cost of giving the concession to a low type. This allows types with lower patience levels to separate through the mechanism when those same types cannot separate in the bilateral game with concessions with future material value.
 
 Thus a mediator is able to both improve welfare and bring willing parties to the table to give the concessions necessary to achieve peace. The improvements by the mediator here do not rely on the mediator's private information as in the models of Kydd (2003), Rauchhaus (2006) and Smith and Stam (2003). Therefore the mediator's preferences need not be an important factor in her participation. So long as the costs are small enough to be worth her participation the mediator can effectively enter and assist in solving the conflict.
+
+One might worry about the requirement that the mediator be willing and able to ensure that the specified concessions are delivered. While it is by no means guaranteed that a mediator who will play this role exists for every conflict, it is not difficult to believe that such a mediator exists for many conflicts. We do not require a formal international enforcement mechanism, but rather that the mediator has, and is willing to use, sufficient leverage to punish a deviating party. Common examples of such punishments are financial or trade sanctions, or the withdrawal of aid or military support. Further, the mechanism can work if the mediator is either (1) only able to incentivize some portion of the concessions or (2) enforces the concessions with some probability less than 1. This would tighten the low type's incentive constraint and loosen the high type's incentive constraint, creating a different level of optimal efficiency of the concessions.\footnote{To see this, in the incentive constraints in the proof of Theorem~\ref{theorem:med}, replace $g_h$ with $q \cdot g_h$, where $q$ represents the proportion of the concession that can be enforced or the probability with which the full concession is enforced.} 
 
 The value of truth telling by the mediator has been examined in the literature. Kydd (2003) studies bias in mediation and how a mediator can credibly communicate information to the parties. Conversely Horner et al. (2010) rely on the mediator to ``hoard'' information in order to be able to improve on unmediated interaction.\footnote{Horner et al. (2010) take cheap talk communication as their benchmark of unmediated communication, whereas we take the unmediated signaling game as our benchmark.} In our model, a successful mediator relies on the parties trusting her. However, here the mediator had no incentive to lie: lying can only potentially hurt the high types, the only type who the mediator can possibly help.
 
