--- a/draft_narrow.tex
+++ b/draft_narrow.tex
@@ -59,7 +59,9 @@ When two parties are engaged in conflict and each distrusts the other's ability 
 
 In the course of a military conflict, settlement negotiations often occur simultaneously with continued fighting. This is true in non-violent disputes as well -- parties engage in costly conflict while they negotiate. If settlement can be achieved, additional costs of conflict -- including additional death and destruction -- are averted. Third-party mediators often participate in such negotiations, but the literature remains divided regarding how and under what conditions mediation can be effective (e.g., Bercovitch 2000; Greig 2005a; Beardsley et al. 2006; Duursma 2020).  This paper sheds new light on the productive role mediators can play by examining their effect on the efficiency of the concessions that conflict participants can offer. In our context, the efficiency of a concession is determined by how much of the material value of the concession is intact when the recipient receives it. If the party who gives the concession destroys any of its material value, the concession is deemed to be less than fully efficient.
 
-We introduce a two-sided signaling model in which concessions can provide future value to the recipient and/or serve as a signal that provides the recipient with information about the type of player the conceding state is. Using a mechanism design framework, we demonstrate that a mediator can facilitate more efficient concessions by removing uncertainty about the ability of the parties to commit to a settlement. Perhaps more importantly, the mediator can also sometimes facilitate settlement when the negotiating parties cannot achieve it through bilateral interaction.
+We introduce a two-sided signaling model in which concessions can provide future value to the recipient and/or serve as a signal that provides the recipient with information about the type of player the conceding state is. Using a mechanism design framework, we demonstrate that a mediator can facilitate more efficient concessions by removing uncertainty about the ability of the parties to commit to a settlement. Perhaps more importantly, the mediator can also sometimes facilitate settlement when the negotiating parties cannot achieve it through bilateral interaction. 
+In other words, commitment is essentially a far-sighted preferences that allows cooperation to emerge, uncertainty can result in missed opportunities for cooperation, and concessions and mediation can facilitate conflict settlement.
+%The sentence above literally parrots the editor's words back to them. Too on the nose?
 
 Two archetypal situations illustrate the significance and difficulty of efficient concession-making in dispute settlement.  The first is the case of disarmament and the second is the concession of control over strategically valuable territory. In latter sections of the paper we discuss the applicability of the model to cases of nonviolent conflict as well, but peacemaking provides a particularly challenging and impactful context to illustrate the utility of inefficient concessions.
 
