--- a/draft_narrow.tex
+++ b/draft_narrow.tex
@@ -50,41 +50,41 @@ University of California, San Diego\\
 \maketitle
 
 \begin{abstract}
-When two parties are engaged in conflict and each distrusts the other's ability to pursue peace, concessions can be used to indicate an interest in making peace. However, when negotiating parties are concerned that concessions could be used against them in the future, a lack of trust can prevent optimal concessions from being made. It can also reduce the possibility of peace. We use mechanism design to explore ways in which a third party mediator can act as a guarantor that promised concessions will be delivered, thereby reducing inefficiencies and increasing the potential for peace. In this process, we open up a new rationale for mediation: to increase the inefficiency of signaling in a preliminary round of negotiations. 
+When two parties are engaged in conflict and each distrusts the other's ability to cooperate or make peace, concessions can be used to indicate an interest in cooperation or peacemaking. However, when negotiating parties are concerned that concessions could be used against them in the future, a lack of trust can prevent optimal concessions from being made. It can also reduce the possibility of peace or cooperation. We use mechanism design to explore ways in which a third party mediator can act as a guarantor that promised concessions will be delivered, thereby reducing inefficiencies and increasing the potential for peace and cooperation. In this process, we open up a new rationale for mediation: to increase the inefficiency of signaling in a preliminary round of negotiations. 
 \end{abstract}
 
 
 
 \section{Introduction} 
 
-In the course of a military conflict, settlement negotiations often occur simultaneously with continued fighting. This is true in non-violent disputes as well, such as long-running episodes of geo-strategic competition -- parties engage in costly conflict while they negotiate. If settlement can be achieved, additional costs of conflict -- including additional death and destruction -- are averted. Third-party mediators often participate in such negotiations, but the literature remains divided regarding how and under what conditions mediation can be effective (e.g., Bercovitch 2000; Greig 2005a; Beardsley et al. 2006; Duursma 2020).  This paper sheds new light on the productive role mediators can play by examining their effect on the efficiency of the concessions that conflict participants can offer. In our context, the efficiency of a concession is determined by how much of the material value of the concession is intact when the recipient receives it. If the party who gives the concession destroys any of its material value, the concession is deemed to be less than fully efficient.
+In negotiations with its neighbors, Israel is hesitant to give certain concessions. The Golan Heights, captured from Syria during the 1967 War, is a particular point of contention in Israeli-Syrian relations. While the Golan Heights does not have the West Bank’s historic or religious importance, Israel values it for its highly strategic location. The Golan Heights could be a useful concession, but Israel senses that were she to give over the land, Syria may ultimately use the concession against them. This same hesitancy exists with the West Bank settlements. Many are located on hilltops that could offer strategic military outposts for forces hostile to Israel. When it occasionally abandons settlements, Israel generally dismantles all infrastructure, including water and electricity, and bulldozes the buildings. Although inefficient, this reduces the possibility of those settlements being used against Israeli interests. Without trust, the most efficient concessions often are not made.
+
+In both active wars and long-simmering conflicts, settlement negotiations often occur simultaneously with continued fighting. This is true in non-violent disputes as well, such as long-running episodes of geo-strategic competition: parties engage in costly conflict while they negotiate. If settlement can be achieved, additional costs of conflict -- including additional death and destruction -- are averted. Third-party mediators often participate in such negotiations, but the literature remains divided regarding how and under what conditions mediation can be effective (e.g., Bercovitch 2000; Greig 2005a; Beardsley et al. 2006; Duursma 2020).  This paper sheds new light on the productive role mediators can play by examining their effect on the efficiency of the concessions that conflict participants can offer. In our context, the efficiency of a concession is determined by how much of the material value of the concession is intact when the recipient receives it. If the party who gives the concession destroys any of its material value, the concession is deemed to be less than fully efficient.
 
 We introduce a two-sided signaling model in which concessions can provide future value to the recipient and/or serve as a signal that provides the recipient with information about the type of player the conceding state is. Using a mechanism design framework, we demonstrate that a mediator can facilitate more efficient concessions by removing uncertainty about the ability of the parties to commit to a settlement. Perhaps more importantly, the mediator can also sometimes facilitate settlement when the negotiating parties cannot achieve it through bilateral interaction. 
 In other words, commitment is essentially a far-sighted preferences that allows cooperation to emerge, uncertainty can result in missed opportunities for cooperation, and concessions and mediation can facilitate conflict settlement.
 %The sentence above literally parrots the editor's words back to them. Too on the nose?
 
 %Attempting to add in the China-US case in a prominent way. The prose is more awkward than I would like still. - March 13, 2023 BG
-Three archetypal situations illustrate the significance and difficulty of efficient concession-making in dispute settlement.  The first is the case of disarmament, the second is the concession of control over strategically valuable territory, and the third is the export of advanced technology. %In each case, efficient concessions are difficult to make because the item conceded may be used by the recipient to bolster their military capabilities, altering the balance of power in the ongoing conflict. Also true in each case, if dispute settlement is achieved, a public good is produced -- peace in the first two cases and innovation and growth in the civilian economy in the third case.  
+Three archetypal situations illustrate the significance and difficulty of efficient concession-making in dispute settlement.  The first is the case of disarmament, the second is the concession of strategically valuable territory, and the third is the export of advanced technology to a strategic rival. %In each case, efficient concessions are difficult to make because the item conceded may be used by the recipient to bolster their military capabilities, altering the balance of power in the ongoing conflict. Also true in each case, if dispute settlement is achieved, a public good is produced -- peace in the first two cases and innovation and growth in the civilian economy in the third case.  
 
 Barbara Walter identified disarmament as the ``critical barrier to civil war settlement'' (1997). Particularly in conflicts between a rebel group and a central government, the best-achievable negotiated settlement often involves policy concessions by the government in exchange for disarmament and recognition of government authority by the rebels. Disarmament by rebels is an efficient concession if fully-operational weapons are turned over to the central government for its own use, while disarmament accompanied by decommissioning is inefficient because the value of the arms is destroyed. Disarming and turning over fully functional weapons is an incredibly difficult concession for rebels to make: once they turn over their arms, they lose future bargaining leverage and have no guarantee that their own weapons won't later be used against them. If the rebels can instead decommission those weapons, an important stumbling block to peace is removed.\footnote{Other stumbling blocks remain, including the fact that government retains its weapons. Thus, credible commitment on the part of the government remains difficult, even if decommissioning occurs.} Peace may therefore be possible with inefficient concessions where it is impossible with efficient concessions.
 
-Control of strategically valuable territory can pose similar challenges in both civil and interstate wars. Even if transferring control of strategically valuable territory creates the best chance for peace, its transfer often involves a substantial risk that the territory will provide military advantage in a future conflict. 
+Control of strategically valuable territory can pose similar challenges in both civil and interstate wars. Even if transferring control of strategically valuable territory creates the best chance for peace, its transfer often involves a substantial risk that the territory will provide military advantage in a future conflict. Following the 1992 war between Armenia and Azerbaijan over the disputed region of Ngorno-Karabakh, Armenia retained control of a significant amount of Azeribaijani territory that neither the Armenian government nor the Karabakh government viewed to be part of its homeland. Azerbaijan, however, valued control of the territory greatly as the home of Azeri residents and wished to govern the territory. Thus, it might have been efficient in the mid-1990s for the Armenian/Karabahk side to cede control of that territory to Azerbaijan as part of a deal in which Azerbaijan recognized Karabakh's independence.  However, that territory was strategically valuable, including territory on both sides of the Lachin Corridor, which connects Ngorno-Karabakh and Armenia. Azerbaijani control of the territory surrounding the corridor would empower Azerbaijan to seize military advantage in the future and cut off land travel between Ngorno-Karabakh and Armenia.  The territory was not conceded and the conflict persisted in costly stalemate for almost twenty years until war broke out anew in 2020. 
 
-Following the 1992 war between Armenia and Azerbaijan over the disputed region of Ngorno-Karabakh, Armenia retained control of a significant amount of Azeribaijani territory that neither the Armenian government nor the Karabakh government viewed to be part of its homeland. Azerbaijan, however, valued control of the territory greatly as the home of Azeri residents and wished to govern the territory. Thus, it might have been efficient in the mid-1990s for the Armenian/Karabahk side to cede control of that territory to Azerbaijan as part of a deal in which Azerbaijan recognized Karabakh's independence.  However, that territory was strategically valuable, including territory on both sides of the Lachin Corridor, which connects Ngorno-Karabakh and Armenia. Azerbaijani control of the territory surrounding the corridor would empower Azerbaijan to seize military advantage in the future and cut off land travel between Ngorno-Karabakh and Armenia.  The territory was not conceded and the conflict persisted in costly stalemate for almost twenty years until war broke out anew in 2020. 
+In our third archetypal example, under both the Trump and Biden administrations, the US has restricted the export of cutting-edge technology to China. China and the US are engaged in geo-strategic competition. Both countries could benefit from the more rapid innovation and growth that free trade in chips and other technology would enable, but there is risk that any technology exported will be used in the military sector to pursue advanced weapons, altering the military balance of power. As of 2023, trade in numerous advanced technologies is restricted, reducing the global pace of innovation and economic growth. 
 
-In our third archetypal example, the US has recently moved to restrict the export of cutting-edge technology to China. China and the US are engaged in geo-strategic competition. Both countries could benefit from the more rapid innovation and growth that free trade in chips and other technology would enable, but there is risk that the technology exported will be used in the military sector to pursue advanced weapons, altering the military balance of power. As of 2023, trade in advanced technologies is restricted, reducing the global pace of innovation and economic growth.
+Walter (1997) observes empirically that, due to the difficulty of making efficient disarmament concessions, civil wars tend to end on the battlefield, rather than through negotiated settlement. Interstate wars over territory are similarly prone to violent, rather than negotiated, resolution (Hensel 1996), and the trajectory of competition and cooperation between the US and China remains highly uncertain. Can mediation offer a path to more settlement, peace and prosperity in these challenging contexts? 
 
-Walter (1997) observes empirically that, due to the difficulty of making efficient disarmament concessions, civil wars tend to end on the battlefield, rather than through negotiated settlement. Interstate wars over territory are similarly prone to violent, rather than negotiated, resolution (Hensel 1996), and the trajectory of competition and cooperation between the US and China remains highly uncertain. Can mediation offer a path to settlement -- and a path to peace and prosperity -- in these challenging contexts? 
-
-This paper revises our understanding of the reasons why efficient concessions are sometimes impossible to make, why inefficient concessions can sometimes be beneficial, and how mediators can both help increase the efficiency of concessions and make peace. In the war context, weapons or strategically valuable territory will not be conceded if the conceding side fears that territory or weapons may be used in future attacks against them. More broadly, countries are reluctant to make concessions that can be used against them in latter rounds of conflict or negotiation. One way to address this concern of dangerous concessions is to destroy the future value of the concession---e.g. decommission weapons, attempt to reduce the strategic value of the territory being conceded, or only allowing trade in technologies without military applications. Another option, and the one on which we focus in this paper, is third-party mediation. We use this model to demonstrate that a third-party mediator can facilitate negotiated settlement by increasing trust and enabling disputants to make more efficient concessions, even when there is a risk those concessions might increase the bargaining power of their opponent in the future. 
+This paper revises our understanding of the reasons why efficient concessions are sometimes impossible to make, why inefficient concessions can sometimes be beneficial, and how mediators can both help increase the efficiency of concessions and make peace. Weapons, strategically valuable territory, and the sharing of advanced technology will not be conceded if the conceding side fears that these items may be used in future attacks against them. Countries are reluctant to make concessions that can be used against them in latter rounds of conflict or negotiation. One way to mitigate the risk of dangerous concessions is to destroy the future value of the concession---e.g. decommission weapons, attempt to reduce the strategic value of the territory being conceded, or only allow trade in less advanced technologies or technologies without military applications. Another option, and the one on which we focus in this paper, is third-party mediation. We use this model to demonstrate that a third-party mediator can facilitate negotiated settlement by increasing trust and enabling disputants to make more efficient concessions, even when there is a risk those concessions might increase the bargaining power of their opponent in the future. 
 
 While an integral part of the literature on conflict, concessions have been only partially addressed by theoretical research. The broader literature that attempts to model war has included concessions as part of bargaining, but has not explicitly considered the role of concessions in achieving peace. Schelling's \emph{Arms and Influence} (1966) modeled war with a game theoretic framework, and Powell (1999) has also defended the use of modeling in understanding war. Fearon (1996), Powell (1996a and 1996b, 2006) and others consider war to be a bargaining failure, caused by commitment problems and asymmetric information. When the assets that are the object of the bargaining confer future power, a lack of credible commitment, or trust, can create a holdup problem that prevents the optimal level of cooperation (Fearon 1996). %[OUTSIDE THE WAR CONTEXT..., ???]
 
-In these models war can be averted by splitting the pie (i.e. the disputed territory) in a way acceptable to both parties. Concessions are modeled as offering part of the pie to the other party, and asymmetric information is about each party's \textit{resolve} to fight and/or military capabilities (Arena 2013). In this context, an example of costly signaling would be military preparations for war (Slantchev 2011).
+In these models war can be averted by splitting the pie (e.g., the disputed territory) in a way acceptable to both parties. Concessions are modeled as offering part of the pie to the other party, and asymmetric information is about each party's \textit{resolve} to fight and/or military capabilities (Arena 2013). In this context, an example of costly signaling would be military preparations for war (Slantchev 2011).
 
-We will approach the commitment problem through this same general understanding, but we model a party's ability to cooperate as private information. A high type is able to cooperate; a low type has incentives not to cooperate. These types map onto the commitment problem, with a high type one who is able to commit in certain scenarios. A low type, though perhaps willing, is unable to do so. A low type may posture like the high type, but lacks the political muscle or will to follow through on a peace agreement. Democratic leaders may more often be high types because they are less likely to face coups or other hostilities in reaction to short term decisions. This is not always the case, however. Mahmoud Abbas, President of the Palestinian National Authority, may be a low type with respect to his negotiations with Israel, not because he does not want to make peace, but because he cannot credibly act on behalf of the entire Palestinian population. 
+We approach the commitment problem through this same general understanding, but we model a party's ability to cooperate as private information. A high type is able to cooperate; a low type has incentives not to cooperate. These types map onto the commitment problem, with a high type one who is able to commit in certain scenarios. A low type, though perhaps willing, is unable to do so. A low type may posture like the high type, but lacks the political muscle or will to follow through on a peace agreement. Democratic leaders may more often be high types because they are less likely to face coups or other hostilities in reaction to short term decisions. This is not always the case, however. Mahmoud Abbas, President of the Palestinian National Authority, may be a low type with respect to his negotiations with Israel, not because he does not want to make peace, but because he cannot credibly act on behalf of the entire Palestinian population. 
 
-In conflict resolution, concessions may act as signals or as an end in themselves -- or as both simultaneously. One contribution of this paper is that it allows concessions to have future material value, signaling value, and both. We will show that when concessions have both signaling and future material value, some of the material value of the concessions may be purposefully destroyed and thus inefficiencies can emerge.
+In our model, concessions may act as signals or as an end in themselves -- or as both simultaneously. One contribution of this paper is that it allows concessions to have future material value, signaling value, and both. We will show that when concessions have both signaling and future material value, some of the material value of the concessions may be purposefully destroyed and thus inefficiencies can emerge.
 
 In analyzing both the signaling and material value of concessions, an extensive literature on gift giving is particularly helpful. Like concessions, costly gifts have been shown to have a valuable role in relationship building. And the gift giving literature, more so than the concessions literature, focuses specifically on the issue of efficiency. Inefficiency is defined for the purposes of this paper as giving a gift (i.e. a concession) that is more costly to the giver than it is valuable to the recipient. 
 
