--- a/draft_narrow.tex
+++ b/draft_narrow.tex
@@ -91,15 +91,16 @@ In analyzing both the signaling and material value of concessions, an extensive 
 %I need to add a bit about historical international relations, and a couple of cites, to the two paragraphs below. BG 3-13-2023
 Often, inefficient gifts occur in the formative stages of relationships or in immature relationships (Camerer 1988). Gifts given in established relationships, such as wedding presents or spousal gifts, are more likely to be cash gifts or efficient gifts that are specifically requested or selected from a registry. Since inefficient gift giving is more likely involved in nascent relationships and partnerships, it is natural to suppose that inefficient gifts play a signaling role in addition to the material value of transferring the gift's inherent worth. 
 
-In efforts to explain the existence of gift giving,  Camerer (1988) and Van de Ven (2000) give several anthropological explanations for inefficiency. Amongst these explanations are altruism, social mores, and egoism. But the most relevant explanation for the field of international relations is that gift giving is strategic. Camerer uses mechanism design to model gifts as costly signals; inefficiency is useful in pre-play communication in order to form relationships between like types. This strategic giving of gifts in societies looks very much like the strategic giving of concessions to remedy conflict situations. When modeled game-theoretically, these environments look even more similar.
+In efforts to explain the existence of gift giving,  Camerer (1988) and Van de Ven (2000) give several anthropological explanations for inefficiency.\footnote{Prendergast and Stole (2001) also provide an explanation for inefficient gift giving focused on the utility of matching.} Amongst these explanations are altruism, social mores, and egoism. But the most relevant explanation for the field of international relations is that gift giving is strategic. Camerer uses mechanism design to model gifts as costly signals; inefficiency is useful in pre-play communication in order to form relationships between like types. This strategic giving of gifts in societies looks very much like the strategic giving of concessions to remedy conflict situations. When modeled game-theoretically, these environments look even more similar.
 
 Camerer's model includes players that have one period to signal before they decide whether to partner. There are two types, high types and low types, and a separating equilibrium is characterized by a threshold gift that is necessary for high types to reveal themselves while low types do not send a gift. Two high types who have just received each other's gifts will then choose to create a partnership with a positive payoff; other combinations will not find it economical to form a partnership.
 
 Camerer shows that in this general formulation, a costly signaling model will always yield efficient gifts.\footnote{In an environment with repeated opportunities for concessions Watson (1999) is able to show that a strong relationship can be reached by starting with small ``gifts'' and increasing their size as the relationship becomes more committed. See Van de Ven (2000) for an overview of this literature.} In order to explain inefficiency, Camerer adds an additional pre-play period where players must pay a cost in order to enter the game and send and receive gifts. If types separate in the pre-play period with low types not being willing to pay, high types are saved the cost of sending a signal to low types in the main game.  High types would, in some parameterizations, be given incentives to give inefficient equilibrium gifts in the main game in order to lower the low types' expected payoff of playing to below the pay-to-play fee. Such an action can keep out the low types and this can raise the expected payoff for a high type by saving on the gifts given. 
 
-Prendergast and Stole (2001) provide a second explanation for inefficient gifts. The authors explain inefficient gift giving by modeling the utility of matching. That is, if players are of a like mindset they get an extra benefit so they are willing to take the risk of giving the wrong gift.
+%Prendergast and Stole (2001) provide a second explanation for inefficient gifts. The authors explain inefficient gift giving by modeling the utility of matching. That is, if players are of a like mindset they get an extra benefit so they are willing to take the risk of giving the wrong gift.
 
-We propose a different conceptual framework to explain this real-life phenomenon that is rooted in a realistic international relations puzzle. The basic formulation of our mechanism-design approach is an expansion of Camerer's (1988) analysis. The model can achieve the basic `inefficient gifts' results of Camerer (1988) and Prendergast and Stole (2001) but does so using a very different explanation for inefficiency. The basic model is a costly signaling model, at its root similar to Spence (1973) and subsequent papers.\footnote{See Connelly et al. (2011) for a review of the costly signaling literature.} In essence, the model shows that if concessions can be later used against the party that gives them, then it can be in a negotiating party's best interest to give inefficient concessions. While our model is tailored to an international relations setting, the explanation for inefficient giving of concessions may be more broadly applicable.   
+We propose a different conceptual framework to explain this real-life phenomenon that is rooted in a realistic international relations puzzle. The basic formulation of our mechanism-design approach is an expansion of Camerer's (1988) analysis. The model can achieve the basic `inefficient gifts' results of Camerer (1988) %and Prendergast and Stole (2001) 
+but does so using a very different explanation for inefficiency. The basic model is a costly signaling model, at its root similar to Spence (1973) and subsequent papers.\footnote{See Connelly et al. (2011) for a review of the costly signaling literature.} In essence, the model shows that if concessions can be later used against the party that gives them, then it can be in a negotiating party's best interest to give inefficient concessions. While our model is tailored to an international relations setting, the explanation for inefficient giving of concessions may be more broadly applicable.   
 
 This demonstration of the incentives for inefficient concessions leads to a new explanation for the role of mediators in conflict resolution. Third party involvement is ubiquitous in conflict and mediation has been extensively studied in the literature, but still the question of third party effectiveness is intensely debated.  Some authors have concluded that mediation has little impact, (Bercovitch 1996;  Bercovitch and Langley 1993; Fortna 2003) while others find mediation playing a positive role in resolving conflict (Dixon 1996; Beardsley et al. 2006).  But the term mediation encompasses a broad range of actions and interactions, making any one-size-fits-all conclusion on the efficacy of mediation difficult. The type of mediation affects the negotiation outcome (Bercovitch 2000; Beardsley et al. 2006), as does the legitimacy of the mediator (e.g., Duursma 2020) and the timing of the mediator's intervention (Greig 2005a).
 
@@ -149,11 +150,13 @@ Parameters are common knowledge with the exception of $\delta_i$, which is count
 When countries are faced with uncertainty about each other's motives, they can proceed in several ways, including giving concessions in order to signal their ability to make peace. We will examine three types of equilibria.\footnote{If the discount factor is high enough, there are many types of equilibria. Consider for instance oscillating every other period between (Trust,Trust) and (Fight,Fight) with a grim trigger ``War'' threat. In this paper, we are not interested in these equilibria because they are not as realistic for applications to conflict scenarios. These are also always payoff dominated by at least one of the other equilibria discussed and thus 	are not attractive.} The Appendix provides a thorough analysis of the various equilibria as well as most proofs. 
 
 \subsection{Pooling equilibrium}
-In the \emph{pooling equilibrium}, neither negotiating party gives concessions in period 0, then both parties play Fight in every period beginning with period 1. Countries do nothing to bridge the credibility gap, and thus do not cooperate. This \emph{pooling equilibrium} is likely to happen when countries are in long-set patterns of distrust. Active fighting is not necessary; remaining outside of a state of peace is all that is required.  See the Appendix for a formal characterization of this type of equilibrium. 
+In the \emph{pooling equilibrium}, neither negotiating party gives concessions in period 0, then both parties play Fight in every period beginning with period 1. Countries do nothing to bridge the credibility gap, and thus do not cooperate. This \emph{pooling equilibrium} is likely to happen when countries are in long-set patterns of distrust. Active fighting is not necessary; remaining outside of a state of peace/cooperation is all that is required.  See the Appendix for a formal characterization of this type of equilibrium. 
 
-Cyprus' civil war is a good example of the pooling equilibrium where neither side is taking actions to move things forward. While both sides posture that they want peace, and while there has been some lessening of tensions, very few concrete actions have been taken that move the sides toward settlement. This conflict is a stalemate. 
+%Cyprus' civil war is a good example of the pooling equilibrium where neither side is taking actions to move things forward. While both sides posture that they want peace, and while there has been some lessening of tensions, very few concrete actions have been taken that move the sides toward settlement. This conflict is a stalemate. 
 
-Sri Lanka is another example. While the government has finally won the war of secession, it still refuses to address grievances of the minorities and leaves the conflict unresolved. Other prominent examples of this pooling equilibrium include Israel and its neighbors, North and South Korea, Greece and Turkey, and a multitude of other long-lasting conflicts. The mistrust is perhaps justified; indeed if one party did take the first step and give a concession first, they may be taken advantage of. 
+Sri Lanka offers one example. While the government has finally won the war of secession, it still refuses to address grievances of the minorities and leaves the conflict unresolved. Other prominent examples of this pooling equilibrium include Israel and its neighbors, Cyprus's civil war, North and South Korea, Greece and Turkey, and a multitude of other long-lasting conflicts. The mistrust is perhaps justified; indeed if one party did take the first step and give a concession first, they may be taken advantage of. 
+
+Outside the war context, [EXAMPLE NEEDED].
 
 Without a third party, there is little hope of overcoming mistrust. These long lasting stalemates are the types of conflict which are most appropriate for mediator involvement. In Section~\ref{sec:med}, we will present a mediation mechanism that illustrates how mediation can help achieve peace in this context. In some sense, these are the cases that are most interesting because the international community might play a positive role. 
 
